--- a/19-decoupling2/main.tex
+++ b/19-decoupling2/main.tex
@@ -30,6 +30,7 @@
 \newcommand{\bP}{{\mathbb P}} 
 \newcommand{\bE}{{\mathbb E}} 
 \newcommand{\sX}{{\mathsf X}} 
+\newcommand{\sY}{{\mathsf Y}} 
 
 \newcommand{\cL}{{{\mathcal L}}}
 
@@ -81,6 +82,122 @@ We are especially trying to understand the following points.
     \item In~\cite{mishchenko2019stochastic}, what is the assumption made on $v_t$ ? what is $Y_t$?
     \item Minibatch analysis of~\cite{mishchenko2019stochastic} 
 \end{itemize}
+\section{About Decoupling}
+
+We shall provide an approach to understand some results of the Decoupling paper. We proceed as follows:
+\begin{itemize}
+    \item First, we introduce Vu-Condat algorithm and provide conditions unde which this algorithm converges linearly (these conditions should be already known in the literature but we have to check)
+    \item Second, we consider an instance of Vu-Condat algorithm that we call the Original method. As an instance of Vu-Condat, we can provide conditions under which the Original method converges linearly
+    \item Third, we add variance reduction for every gradient appearing in the Original method. This leads to the VR-Original method. This doesn't change the conditions under which we have linear rate (the proof is an extension of the proof of the main theorem of the $\sigma_k$ paper)
+    \item Finally, we add "coordinate descent" on top of VR-Original method. This leads to the Decoupling method. This doesn't change the conditions under which we have linear rate (This is based on standard considerations regarding coordinate descent).
+\end{itemize}
+
+\section{Vu-Condat}
+
+Consider an Euclidean space $\sX$ (it is important to consider an abstract space and not just $\bR^d$ to simplify the presentation), two monotone operators $A,B$ and a positive definite matrix $P$.
+The Forward Backward algorithm is written
+\begin{equation}
+    \label{eq:FB}
+    x^{k+1} = x^k - \gamma P^{-1} (B(x^k) + A(x^{k+1}))
+\end{equation}
+Note that $x^{k+1}$ is implicitly define. The equality $=$ is actually an inclusion $\in$ because monotone operators can be multi-valued, but we assume that our monotone operators are single valued to keep it simpler (but it is not necessary)
+The goal of the FB algorithm is to converge to a zero of $A+B$ i.e a point $x_\star$ such that $0 = A(x_\star) + B(x_\star)$. The most famous application of the FB algorithm is the case where $P=I$, $B = \nabla F$ and $A = \partial G$, where $F$ and $G$ are two convex functions. In this case the FB algorithm boils down to the prox-grad algorithm and converges to a minimizer of $F+G$.
+
+If $P = I$, the analysis of the FB algorithm is as follows:
+\begin{align*}
+    &\|x^{k+1} - x^\star\|^2 \\=& \|x^k - x^\star\|^2 - 2\gamma\ps{B(x^k),x^k-x^\star} - 2\gamma\ps{A(x^{k+1}),x^k-x^\star} +  \gamma^2\|B(x^k) + A(x^{k+1})\|^2\\ 
+    =& \|x^k - x^\star\|^2 - 2\gamma\ps{B(x^k)-B(x^\star),x^k-x^\star} - 2\gamma\ps{A(x^{k+1})-A(x^\star),x^k-x^\star} +  \gamma^2\|B(x^k) + A(x^{k+1})\|^2\\
+    =& \|x^k - x^\star\|^2 - 2\gamma\ps{B(x^k)-B(x^\star),x^k-x^\star}  +  \gamma^2\|B(x^k) + A(x^{k+1})\|^2\\
+    &- 2\gamma\ps{A(x^{k+1})-A(x^\star),x^{k+1}-x^\star} -2\gamma\ps{A(x^{k+1})-A(x^\star),x^{k}-x^{k+1}}\\
+    =& \|x^k - x^\star\|^2 - 2\gamma\ps{B(x^k)-B(x^\star),x^k-x^\star}  +  \gamma^2\|B(x^k) + A(x^{k+1})\|^2\\
+    &- 2\gamma\ps{A(x^{k+1})-A(x^\star),x^{k+1}-x^\star} -2\gamma^2\ps{A(x^{k+1})-A(x^\star),B(x^k)+A(x^{k+1})}\\
+    =& \|x^k - x^\star\|^2 - 2\gamma\ps{B(x^k)-B(x^\star),x^k-x^\star}  +  \gamma^2\|B(x^k)\|^2 - \gamma^2\|A(x^{k+1})\|^2 \\
+    &- 2\gamma\ps{A(x^{k+1})-A(x^\star),x^{k+1}-x^\star} +2\gamma^2\ps{A(x^\star),B(x^k)+A(x^{k+1})}.
+\end{align*}
+The simplifications is the last line comes from expanding the square. Now we use 
+$$
+\gamma^2\|B(x^k)\|^2 - \gamma^2\|A(x^{k+1})\|^2 +2\gamma^2\ps{A(x^\star),B(x^k)+A(x^{k+1})} = -\gamma^2\|A(x^{k+1}) - A(x^\star)\|^2 + \gamma^2 \|B(x^k) + A(x^\star) \|^2,
+$$
+To get 
+\begin{align*}
+    &\|x^{k+1} - x^\star\|^2 \\
+    =& \|x^k - x^\star\|^2 - 2\gamma\ps{B(x^k)-B(x^\star),x^k-x^\star}  -\gamma^2\|A(x^{k+1}) - A(x^\star)\|^2 + \gamma^2 \|B(x^k) + A(x^\star) \|^2\\
+    &- 2\gamma\ps{A(x^{k+1})-A(x^\star),x^{k+1}-x^\star}.
+\end{align*}
+Finally, we use
+$$B(x^k) + A(x^\star) = B(x^k) - B(x^\star) + B(x^\star) + A(x^\star) = B(x^k) - B(x^\star)$$
+and we have 
+\begin{align}
+    \label{eq:FB-final}
+    &\|x^{k+1} - x^\star\|^2 \\
+    =& \|x^k - x^\star\|^2 -\gamma^2\|A(x^{k+1}) - A(x^\star)\|^2 + \gamma^2 \|B(x^k) - B(x^\star) \|^2\\
+    &- 2\gamma\ps{A(x^{k+1})-A(x^\star),x^{k+1}-x^\star} - 2\gamma\ps{B(x^k)-B(x^\star),x^k-x^\star}.
+\end{align}
+The two inner product are negative because of monotonicity. The only nonnegative term is $\|B(x^k) - B(x^\star) \|^2$. It is managed using some smoothness condition (namely, cocoercivity or lipschitzness). To get a linear rate, we need a contraction. This contraction can come from the three negative terms. For example, if $A$ or $B$ is strongly monotone we get a contraction. But this is not the only case where we have a contraction, we can use some partial strong monotonicity (we will see an example later).
+
+The analysis in the case $P \neq I$ follows the same lines, by replacing $\|\cdot\|$ (resp. $\ps{\cdot,\cdot}$) by the norm (resp. the inner product) induced by $P$. 
+
+
+
+
+
+Vu-Condat algorithm aims at minimizing $\min F(x) + G(x) + H(Mx)$ where $F,G,H$ are convex functions, $F$ is smooth and $M : \sX \to \sY$ is a matrix. It is a splitting algorithm: he user is only require to compute $\nabla F$, $\prox_G$ and $\prox_H$ separately. It is a primal dual algorithm. If $F=0$ is boils down to Chambolle-Pock algorithm.
+
+Interestingly, Vu-Condat can be obtained as an instance of the FB algorithm by carefully instanciating $A,B,P$. This is the easiest way to understand Vu-Condat algorithm. In the case of Vu-Condat, the optimization space is $\sX \times \sY$ i.e the iterates are elements $(x,y) \in \sX \times \sY$. The operators are defined on $\sX \times \sY$ by
+\[
+P_\gamma = \begin{bmatrix} I &  -\gamma M^T \\ -\gamma M & I \end{bmatrix},
+\]
+\[
+A(x,y) = \begin{bmatrix} \partial G(x)&  + M^T y \\ -M x& +\partial H^\star(y)\end{bmatrix} .
+\]
+\[
+B(x,y) = \begin{bmatrix} \nabla F(x) \\ 0 \end{bmatrix} .
+\]
+To see that $A,B$ are monotone, note that $B$ is actually the gradient of the function $(x,y) \mapsto F(x)$ and that $A$ is the sum of a skew symmetrix matrix $M$ and the subdifferential of $(x,y) \mapsto G(x) + H^\star(y)$. Recall that a skew symmetric matrix is a monotone operator (since $\ps{Mz,z} = -\ps{Mz,z}$ we have $\ps{Mz,z} \geq 0$). As a sum, $A$ is monotone.
+
+Note also that a zero $(x^\star,y^\star)$ of $A+B$ is a primal-dual optimal point, i.e a saddle point of the Lagragien. Therefore $x^\star$ is a solution of our problem: since $0 = -Mx +\partial H^\star(y)$ we have $y = \partial H(Mx)$ and therefore $0=  \nabla F(x^\star) + \partial G(x^\star) + \partial H(M x^\star)$.
+
+\subsection{Conditions under whcich Vu Condat converges linearly}
+The negative terms in the analysis of Vu-Condat are the following (recall that the norm is the norm on the product space $\sX \times \sY$)
+    \begin{itemize}
+        \item $\ps{A(z^{k+1})-A(z^\star),x^{k+1}-x^\star} = \ps{\partial G(x^{k+1})-\partial G(x^\star),x^{k+1}-x^\star}_\sX + \ps{\partial H^\star(y^{k+1})-\partial H^\star(y^\star),y^{k+1}-y^\star}_\sY$
+        \item $\ps{B(z^k)-B(z^\star),z^k-z^\star} = \ps{\nabla F(x) - \nabla F(x_\star),x-x^\star}_\sX$
+        \item $\|A(z^{k+1}) - A(z^\star)\|^2 = \|\partial G(x^{k+1}) + M^T y^{k+1} - (\partial G(x^{\star}) + M^T y^{\star})\|_\sX^2 + \|(-M x^{k+1} + \partial H^\star(y^{k+1})) - (-M x^{\star} + \partial H^\star(y^{\star}))\|_\sY^2$
+    \end{itemize}
+
+To have linear rate we need contraction in $x$ and $y$. Each of these term can bring a contraction. 
+
+Here we give some sufficient conditions. We have linear rate if 
+    \begin{enumerate}
+        \item \label{item:smooth} $F$ strongly convex (or $G$ strongly convex) and $H^\star$ strongly convex (i.e $H$ smooth)
+        \item \label{item:lin}$F$ strongly convex (or $G$ strongly convex) and $M^T = I$ (more generally, $M^T \geq \omega I$ \asnote{I mean $\|Mx\| \geq \omega\|x\|$ for some $\omega$ which is actually equivalent to $M^T$ injective}) and $G = 0$ (more generally, $G$ smooth)
+        \item \dots
+        \item \dots
+        \item \dots
+        \item \dots\asnote{Complete}
+    \end{enumerate}
+
+\section{An instance of Vu Condat}
+
+Consider the problem 
+\begin{equation}
+    \label{eq:appli}
+\min_{x \in \sX} f(x) + \sum_{j=1}^m g_j(x)
+\end{equation}
+This problem can be tackled by Vu-Condat by setting $F(x) = f(x)$, $\sY = \sX^m$, $G(y_1,\ldots,y_m) = \sum_j g_j(y_j)$ and $M : \sX \to \sY, Mx = 1/m (x,\ldots,x)$
+The iterates are now elements $(x,(y_1,\ldots,y_m)) \in \sX \times \sX^m$. Note that $G$ is separable and $M^T(y_1,\ldots,y_m) = \frac{1}{m}\sum_{j=1}^m y_j$. The prox of $G$ can be computed in parallel, therefore Vu-Condat applied to~\ref{eq:appli} is written\asnote{Check the step sizes. Rewrite decoupling as Vu-Condat}
+\begin{align*}
+   ....
+\end{align*}
+
+We call this algorithm the Original method. It is a parallel version of the decoupling algorithm without VR.
+Conditions under which this algorithm converges linearly can be borrowed from the previous section.
+
+We now add VR and coordinate descent to the Original method in order to obtain the Decoupling method. The conditions under which linear rate holds don't change.
+
+\section{VR}
+
+\section{Coordinate descent}
 
 
 \section{Something else: Stochastic Chambolle-Pock algorithm}
